MdCompiler/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> statement
Rule 2     statement -> <empty>
Rule 3     statement -> statement CR expression
Rule 4     statement -> statement CR
Rule 5     statement -> expression
Rule 6     expression -> H1 factor
Rule 7     expression -> H2 factor
Rule 8     expression -> H3 factor
Rule 9     expression -> expression expression
Rule 10    expression -> factor
Rule 11    expression -> line
Rule 12    expression -> picture
Rule 13    expression -> ul
Rule 14    expression -> codes
Rule 15    expression -> quote
Rule 16    expression -> link
Rule 17    expression -> strong
Rule 18    expression -> em
Rule 19    line -> STAR STAR STAR
Rule 20    line -> USCORE USCORE USCORE
Rule 21    line -> STAR BLANK STAR BLANK STAR
Rule 22    line -> USCORE BLANK USCORE BLANK USCORE
Rule 23    line -> MINUS MINUS MINUS
Rule 24    line -> EQUALS EQUALS EQUALS
Rule 25    strong -> STAR em STAR
Rule 26    strong -> USCORE em USCORE
Rule 27    em -> starfactor STAR
Rule 28    em -> USCORE factor USCORE
Rule 29    starfactor -> STAR factor
Rule 30    starfactor -> starfactor factor
Rule 31    quote -> GT factor
Rule 32    codes -> code QUO
Rule 33    codes -> code CR QUO
Rule 34    codes -> QUO USCORE factor USCORE QUO
Rule 35    codes -> QUO codes QUO
Rule 36    code -> QUO factor
Rule 37    code -> code factor
Rule 38    code -> code CR
Rule 39    code -> QUO CR factor
Rule 40    ul -> olis
Rule 41    ul -> olis iul
Rule 42    oli -> NUMBER DOT factor CR
Rule 43    olis -> olis oli
Rule 44    olis -> oli
Rule 45    ul -> lis
Rule 46    iul -> ilis
Rule 47    iiul -> iilis
Rule 48    ul -> lis iul
Rule 49    iul -> ilis iiul
Rule 50    li -> starfactor CR
Rule 51    ili -> TAB li
Rule 52    iili -> TAB TAB li
Rule 53    lis -> lis li
Rule 54    lis -> li
Rule 55    ilis -> ilis ili
Rule 56    ilis -> ili
Rule 57    iilis -> iilis iili
Rule 58    iilis -> iili
Rule 59    li -> li PLUS factor CR
Rule 60    li -> li MINUS factor CR
Rule 61    li -> PLUS factor CR
Rule 62    li -> MINUS factor CR
Rule 63    picture -> EXCLAM LSB factor RSB LB factor RB
Rule 64    link -> LT factor GT
Rule 65    link -> LSB factor RSB LB factor RB
Rule 66    factor -> factor subfactor
Rule 67    factor -> subfactor
Rule 68    subfactor -> WORD
Rule 69    subfactor -> NUMBER
Rule 70    subfactor -> DOT
Rule 71    subfactor -> BLANK
Rule 72    subfactor -> TAB

Terminals, with rules where they appear

BLANK                : 21 21 22 22 71
CR                   : 3 4 33 38 39 42 50 59 60 61 62
DOT                  : 42 70
EQUALS               : 24 24 24
EXCLAM               : 63
GT                   : 31 64
H1                   : 6
H2                   : 7
H3                   : 8
LB                   : 63 65
LSB                  : 63 65
LT                   : 64
MINUS                : 23 23 23 60 62
NUMBER               : 42 69
PLUS                 : 59 61
QUO                  : 32 33 34 34 35 35 36 39
RB                   : 63 65
RSB                  : 63 65
STAR                 : 19 19 19 21 21 21 25 25 27 29
TAB                  : 51 52 52 72
USCORE               : 20 20 20 22 22 22 26 26 28 28 34 34
WORD                 : 68
error                : 

Nonterminals, with rules where they appear

body                 : 0
code                 : 32 33 37 38
codes                : 14 35
em                   : 18 25 26
expression           : 3 5 9 9
factor               : 6 7 8 10 28 29 30 31 34 36 37 39 42 59 60 61 62 63 63 64 65 65 66
iili                 : 57 58
iilis                : 47 57
iiul                 : 49
ili                  : 55 56
ilis                 : 46 49 55
iul                  : 41 48
li                   : 51 52 53 54 59 60
line                 : 11
link                 : 16
lis                  : 45 48 53
oli                  : 43 44
olis                 : 40 41 43
picture              : 12
quote                : 15
starfactor           : 27 30 50
statement            : 1 3 4
strong               : 17
subfactor            : 66 67
ul                   : 13

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . statement
    (2) statement -> .
    (3) statement -> . statement CR expression
    (4) statement -> . statement CR
    (5) statement -> . expression
    (6) expression -> . H1 factor
    (7) expression -> . H2 factor
    (8) expression -> . H3 factor
    (9) expression -> . expression expression
    (10) expression -> . factor
    (11) expression -> . line
    (12) expression -> . picture
    (13) expression -> . ul
    (14) expression -> . codes
    (15) expression -> . quote
    (16) expression -> . link
    (17) expression -> . strong
    (18) expression -> . em
    (66) factor -> . factor subfactor
    (67) factor -> . subfactor
    (19) line -> . STAR STAR STAR
    (20) line -> . USCORE USCORE USCORE
    (21) line -> . STAR BLANK STAR BLANK STAR
    (22) line -> . USCORE BLANK USCORE BLANK USCORE
    (23) line -> . MINUS MINUS MINUS
    (24) line -> . EQUALS EQUALS EQUALS
    (63) picture -> . EXCLAM LSB factor RSB LB factor RB
    (40) ul -> . olis
    (41) ul -> . olis iul
    (45) ul -> . lis
    (48) ul -> . lis iul
    (32) codes -> . code QUO
    (33) codes -> . code CR QUO
    (34) codes -> . QUO USCORE factor USCORE QUO
    (35) codes -> . QUO codes QUO
    (31) quote -> . GT factor
    (64) link -> . LT factor GT
    (65) link -> . LSB factor RSB LB factor RB
    (25) strong -> . STAR em STAR
    (26) strong -> . USCORE em USCORE
    (27) em -> . starfactor STAR
    (28) em -> . USCORE factor USCORE
    (68) subfactor -> . WORD
    (69) subfactor -> . NUMBER
    (70) subfactor -> . DOT
    (71) subfactor -> . BLANK
    (72) subfactor -> . TAB
    (43) olis -> . olis oli
    (44) olis -> . oli
    (53) lis -> . lis li
    (54) lis -> . li
    (36) code -> . QUO factor
    (37) code -> . code factor
    (38) code -> . code CR
    (39) code -> . QUO CR factor
    (29) starfactor -> . STAR factor
    (30) starfactor -> . starfactor factor
    (42) oli -> . NUMBER DOT factor CR
    (50) li -> . starfactor CR
    (59) li -> . li PLUS factor CR
    (60) li -> . li MINUS factor CR
    (61) li -> . PLUS factor CR
    (62) li -> . MINUS factor CR

    CR              reduce using rule 2 (statement -> .)
    $end            reduce using rule 2 (statement -> .)
    H1              shift and go to state 32
    H2              shift and go to state 30
    H3              shift and go to state 31
    STAR            shift and go to state 3
    USCORE          shift and go to state 7
    MINUS           shift and go to state 9
    EQUALS          shift and go to state 25
    EXCLAM          shift and go to state 8
    QUO             shift and go to state 37
    GT              shift and go to state 22
    LT              shift and go to state 15
    LSB             shift and go to state 13
    WORD            shift and go to state 11
    NUMBER          shift and go to state 5
    DOT             shift and go to state 10
    BLANK           shift and go to state 18
    TAB             shift and go to state 29
    PLUS            shift and go to state 16

    body                           shift and go to state 20
    picture                        shift and go to state 21
    codes                          shift and go to state 12
    olis                           shift and go to state 34
    oli                            shift and go to state 4
    quote                          shift and go to state 23
    lis                            shift and go to state 6
    em                             shift and go to state 1
    li                             shift and go to state 14
    starfactor                     shift and go to state 35
    ul                             shift and go to state 33
    code                           shift and go to state 2
    link                           shift and go to state 26
    statement                      shift and go to state 17
    factor                         shift and go to state 24
    line                           shift and go to state 27
    strong                         shift and go to state 28
    expression                     shift and go to state 36
    subfactor                      shift and go to state 19

state 1

    (18) expression -> em .

    H1              reduce using rule 18 (expression -> em .)
    H2              reduce using rule 18 (expression -> em .)
    H3              reduce using rule 18 (expression -> em .)
    STAR            reduce using rule 18 (expression -> em .)
    USCORE          reduce using rule 18 (expression -> em .)
    MINUS           reduce using rule 18 (expression -> em .)
    EQUALS          reduce using rule 18 (expression -> em .)
    EXCLAM          reduce using rule 18 (expression -> em .)
    QUO             reduce using rule 18 (expression -> em .)
    GT              reduce using rule 18 (expression -> em .)
    LT              reduce using rule 18 (expression -> em .)
    LSB             reduce using rule 18 (expression -> em .)
    WORD            reduce using rule 18 (expression -> em .)
    NUMBER          reduce using rule 18 (expression -> em .)
    DOT             reduce using rule 18 (expression -> em .)
    BLANK           reduce using rule 18 (expression -> em .)
    TAB             reduce using rule 18 (expression -> em .)
    PLUS            reduce using rule 18 (expression -> em .)
    CR              reduce using rule 18 (expression -> em .)
    $end            reduce using rule 18 (expression -> em .)


state 2

    (32) codes -> code . QUO
    (33) codes -> code . CR QUO
    (37) code -> code . factor
    (38) code -> code . CR
    (66) factor -> . factor subfactor
    (67) factor -> . subfactor
    (68) subfactor -> . WORD
    (69) subfactor -> . NUMBER
    (70) subfactor -> . DOT
    (71) subfactor -> . BLANK
    (72) subfactor -> . TAB

    QUO             shift and go to state 39
    CR              shift and go to state 41
    WORD            shift and go to state 11
    NUMBER          shift and go to state 38
    DOT             shift and go to state 10
    BLANK           shift and go to state 18
    TAB             shift and go to state 29

    subfactor                      shift and go to state 19
    factor                         shift and go to state 40

state 3

    (19) line -> STAR . STAR STAR
    (21) line -> STAR . BLANK STAR BLANK STAR
    (25) strong -> STAR . em STAR
    (29) starfactor -> STAR . factor
    (27) em -> . starfactor STAR
    (28) em -> . USCORE factor USCORE
    (66) factor -> . factor subfactor
    (67) factor -> . subfactor
    (29) starfactor -> . STAR factor
    (30) starfactor -> . starfactor factor
    (68) subfactor -> . WORD
    (69) subfactor -> . NUMBER
    (70) subfactor -> . DOT
    (71) subfactor -> . BLANK
    (72) subfactor -> . TAB

    STAR            shift and go to state 43
    BLANK           shift and go to state 45
    USCORE          shift and go to state 44
    WORD            shift and go to state 11
    NUMBER          shift and go to state 38
    DOT             shift and go to state 10
    TAB             shift and go to state 29

    em                             shift and go to state 42
    starfactor                     shift and go to state 47
    subfactor                      shift and go to state 19
    factor                         shift and go to state 46

state 4

    (44) olis -> oli .

    NUMBER          reduce using rule 44 (olis -> oli .)
    TAB             reduce using rule 44 (olis -> oli .)
    H1              reduce using rule 44 (olis -> oli .)
    H2              reduce using rule 44 (olis -> oli .)
    H3              reduce using rule 44 (olis -> oli .)
    STAR            reduce using rule 44 (olis -> oli .)
    USCORE          reduce using rule 44 (olis -> oli .)
    MINUS           reduce using rule 44 (olis -> oli .)
    EQUALS          reduce using rule 44 (olis -> oli .)
    EXCLAM          reduce using rule 44 (olis -> oli .)
    QUO             reduce using rule 44 (olis -> oli .)
    GT              reduce using rule 44 (olis -> oli .)
    LT              reduce using rule 44 (olis -> oli .)
    LSB             reduce using rule 44 (olis -> oli .)
    WORD            reduce using rule 44 (olis -> oli .)
    DOT             reduce using rule 44 (olis -> oli .)
    BLANK           reduce using rule 44 (olis -> oli .)
    PLUS            reduce using rule 44 (olis -> oli .)
    CR              reduce using rule 44 (olis -> oli .)
    $end            reduce using rule 44 (olis -> oli .)


state 5

    (69) subfactor -> NUMBER .
    (42) oli -> NUMBER . DOT factor CR

  ! shift/reduce conflict for DOT resolved as shift
    WORD            reduce using rule 69 (subfactor -> NUMBER .)
    NUMBER          reduce using rule 69 (subfactor -> NUMBER .)
    BLANK           reduce using rule 69 (subfactor -> NUMBER .)
    TAB             reduce using rule 69 (subfactor -> NUMBER .)
    H1              reduce using rule 69 (subfactor -> NUMBER .)
    H2              reduce using rule 69 (subfactor -> NUMBER .)
    H3              reduce using rule 69 (subfactor -> NUMBER .)
    STAR            reduce using rule 69 (subfactor -> NUMBER .)
    USCORE          reduce using rule 69 (subfactor -> NUMBER .)
    MINUS           reduce using rule 69 (subfactor -> NUMBER .)
    EQUALS          reduce using rule 69 (subfactor -> NUMBER .)
    EXCLAM          reduce using rule 69 (subfactor -> NUMBER .)
    QUO             reduce using rule 69 (subfactor -> NUMBER .)
    GT              reduce using rule 69 (subfactor -> NUMBER .)
    LT              reduce using rule 69 (subfactor -> NUMBER .)
    LSB             reduce using rule 69 (subfactor -> NUMBER .)
    PLUS            reduce using rule 69 (subfactor -> NUMBER .)
    CR              reduce using rule 69 (subfactor -> NUMBER .)
    $end            reduce using rule 69 (subfactor -> NUMBER .)
    DOT             shift and go to state 48

  ! DOT             [ reduce using rule 69 (subfactor -> NUMBER .) ]


state 6

    (45) ul -> lis .
    (48) ul -> lis . iul
    (53) lis -> lis . li
    (46) iul -> . ilis
    (49) iul -> . ilis iiul
    (50) li -> . starfactor CR
    (59) li -> . li PLUS factor CR
    (60) li -> . li MINUS factor CR
    (61) li -> . PLUS factor CR
    (62) li -> . MINUS factor CR
    (55) ilis -> . ilis ili
    (56) ilis -> . ili
    (29) starfactor -> . STAR factor
    (30) starfactor -> . starfactor factor
    (51) ili -> . TAB li

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for STAR resolved as shift
  ! shift/reduce conflict for TAB resolved as shift
    H1              reduce using rule 45 (ul -> lis .)
    H2              reduce using rule 45 (ul -> lis .)
    H3              reduce using rule 45 (ul -> lis .)
    USCORE          reduce using rule 45 (ul -> lis .)
    EQUALS          reduce using rule 45 (ul -> lis .)
    EXCLAM          reduce using rule 45 (ul -> lis .)
    QUO             reduce using rule 45 (ul -> lis .)
    GT              reduce using rule 45 (ul -> lis .)
    LT              reduce using rule 45 (ul -> lis .)
    LSB             reduce using rule 45 (ul -> lis .)
    WORD            reduce using rule 45 (ul -> lis .)
    NUMBER          reduce using rule 45 (ul -> lis .)
    DOT             reduce using rule 45 (ul -> lis .)
    BLANK           reduce using rule 45 (ul -> lis .)
    CR              reduce using rule 45 (ul -> lis .)
    $end            reduce using rule 45 (ul -> lis .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 56
    STAR            shift and go to state 49
    TAB             shift and go to state 54

  ! STAR            [ reduce using rule 45 (ul -> lis .) ]
  ! MINUS           [ reduce using rule 45 (ul -> lis .) ]
  ! TAB             [ reduce using rule 45 (ul -> lis .) ]
  ! PLUS            [ reduce using rule 45 (ul -> lis .) ]

    iul                            shift and go to state 50
    li                             shift and go to state 51
    ilis                           shift and go to state 52
    ili                            shift and go to state 53
    starfactor                     shift and go to state 55

state 7

    (20) line -> USCORE . USCORE USCORE
    (22) line -> USCORE . BLANK USCORE BLANK USCORE
    (26) strong -> USCORE . em USCORE
    (28) em -> USCORE . factor USCORE
    (27) em -> . starfactor STAR
    (28) em -> . USCORE factor USCORE
    (66) factor -> . factor subfactor
    (67) factor -> . subfactor
    (29) starfactor -> . STAR factor
    (30) starfactor -> . starfactor factor
    (68) subfactor -> . WORD
    (69) subfactor -> . NUMBER
    (70) subfactor -> . DOT
    (71) subfactor -> . BLANK
    (72) subfactor -> . TAB

    USCORE          shift and go to state 60
    BLANK           shift and go to state 58
    STAR            shift and go to state 49
    WORD            shift and go to state 11
    NUMBER          shift and go to state 38
    DOT             shift and go to state 10
    TAB             shift and go to state 29

    em                             shift and go to state 57
    starfactor                     shift and go to state 47
    subfactor                      shift and go to state 19
    factor                         shift and go to state 59

state 8

    (63) picture -> EXCLAM . LSB factor RSB LB factor RB

    LSB             shift and go to state 61


state 9

    (23) line -> MINUS . MINUS MINUS
    (62) li -> MINUS . factor CR
    (66) factor -> . factor subfactor
    (67) factor -> . subfactor
    (68) subfactor -> . WORD
    (69) subfactor -> . NUMBER
    (70) subfactor -> . DOT
    (71) subfactor -> . BLANK
    (72) subfactor -> . TAB

    MINUS           shift and go to state 63
    WORD            shift and go to state 11
    NUMBER          shift and go to state 38
    DOT             shift and go to state 10
    BLANK           shift and go to state 18
    TAB             shift and go to state 29

    subfactor                      shift and go to state 19
    factor                         shift and go to state 62

state 10

    (70) subfactor -> DOT .

    WORD            reduce using rule 70 (subfactor -> DOT .)
    NUMBER          reduce using rule 70 (subfactor -> DOT .)
    DOT             reduce using rule 70 (subfactor -> DOT .)
    BLANK           reduce using rule 70 (subfactor -> DOT .)
    TAB             reduce using rule 70 (subfactor -> DOT .)
    H1              reduce using rule 70 (subfactor -> DOT .)
    H2              reduce using rule 70 (subfactor -> DOT .)
    H3              reduce using rule 70 (subfactor -> DOT .)
    STAR            reduce using rule 70 (subfactor -> DOT .)
    USCORE          reduce using rule 70 (subfactor -> DOT .)
    MINUS           reduce using rule 70 (subfactor -> DOT .)
    EQUALS          reduce using rule 70 (subfactor -> DOT .)
    EXCLAM          reduce using rule 70 (subfactor -> DOT .)
    QUO             reduce using rule 70 (subfactor -> DOT .)
    GT              reduce using rule 70 (subfactor -> DOT .)
    LT              reduce using rule 70 (subfactor -> DOT .)
    LSB             reduce using rule 70 (subfactor -> DOT .)
    PLUS            reduce using rule 70 (subfactor -> DOT .)
    CR              reduce using rule 70 (subfactor -> DOT .)
    $end            reduce using rule 70 (subfactor -> DOT .)
    RSB             reduce using rule 70 (subfactor -> DOT .)
    RB              reduce using rule 70 (subfactor -> DOT .)


state 11

    (68) subfactor -> WORD .

    WORD            reduce using rule 68 (subfactor -> WORD .)
    NUMBER          reduce using rule 68 (subfactor -> WORD .)
    DOT             reduce using rule 68 (subfactor -> WORD .)
    BLANK           reduce using rule 68 (subfactor -> WORD .)
    TAB             reduce using rule 68 (subfactor -> WORD .)
    H1              reduce using rule 68 (subfactor -> WORD .)
    H2              reduce using rule 68 (subfactor -> WORD .)
    H3              reduce using rule 68 (subfactor -> WORD .)
    STAR            reduce using rule 68 (subfactor -> WORD .)
    USCORE          reduce using rule 68 (subfactor -> WORD .)
    MINUS           reduce using rule 68 (subfactor -> WORD .)
    EQUALS          reduce using rule 68 (subfactor -> WORD .)
    EXCLAM          reduce using rule 68 (subfactor -> WORD .)
    QUO             reduce using rule 68 (subfactor -> WORD .)
    GT              reduce using rule 68 (subfactor -> WORD .)
    LT              reduce using rule 68 (subfactor -> WORD .)
    LSB             reduce using rule 68 (subfactor -> WORD .)
    PLUS            reduce using rule 68 (subfactor -> WORD .)
    CR              reduce using rule 68 (subfactor -> WORD .)
    $end            reduce using rule 68 (subfactor -> WORD .)
    RSB             reduce using rule 68 (subfactor -> WORD .)
    RB              reduce using rule 68 (subfactor -> WORD .)


state 12

    (14) expression -> codes .

    H1              reduce using rule 14 (expression -> codes .)
    H2              reduce using rule 14 (expression -> codes .)
    H3              reduce using rule 14 (expression -> codes .)
    STAR            reduce using rule 14 (expression -> codes .)
    USCORE          reduce using rule 14 (expression -> codes .)
    MINUS           reduce using rule 14 (expression -> codes .)
    EQUALS          reduce using rule 14 (expression -> codes .)
    EXCLAM          reduce using rule 14 (expression -> codes .)
    QUO             reduce using rule 14 (expression -> codes .)
    GT              reduce using rule 14 (expression -> codes .)
    LT              reduce using rule 14 (expression -> codes .)
    LSB             reduce using rule 14 (expression -> codes .)
    WORD            reduce using rule 14 (expression -> codes .)
    NUMBER          reduce using rule 14 (expression -> codes .)
    DOT             reduce using rule 14 (expression -> codes .)
    BLANK           reduce using rule 14 (expression -> codes .)
    TAB             reduce using rule 14 (expression -> codes .)
    PLUS            reduce using rule 14 (expression -> codes .)
    CR              reduce using rule 14 (expression -> codes .)
    $end            reduce using rule 14 (expression -> codes .)


state 13

    (65) link -> LSB . factor RSB LB factor RB
    (66) factor -> . factor subfactor
    (67) factor -> . subfactor
    (68) subfactor -> . WORD
    (69) subfactor -> . NUMBER
    (70) subfactor -> . DOT
    (71) subfactor -> . BLANK
    (72) subfactor -> . TAB

    WORD            shift and go to state 11
    NUMBER          shift and go to state 38
    DOT             shift and go to state 10
    BLANK           shift and go to state 18
    TAB             shift and go to state 29

    subfactor                      shift and go to state 19
    factor                         shift and go to state 64

state 14

    (54) lis -> li .
    (59) li -> li . PLUS factor CR
    (60) li -> li . MINUS factor CR

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    STAR            reduce using rule 54 (lis -> li .)
    TAB             reduce using rule 54 (lis -> li .)
    H1              reduce using rule 54 (lis -> li .)
    H2              reduce using rule 54 (lis -> li .)
    H3              reduce using rule 54 (lis -> li .)
    USCORE          reduce using rule 54 (lis -> li .)
    EQUALS          reduce using rule 54 (lis -> li .)
    EXCLAM          reduce using rule 54 (lis -> li .)
    QUO             reduce using rule 54 (lis -> li .)
    GT              reduce using rule 54 (lis -> li .)
    LT              reduce using rule 54 (lis -> li .)
    LSB             reduce using rule 54 (lis -> li .)
    WORD            reduce using rule 54 (lis -> li .)
    NUMBER          reduce using rule 54 (lis -> li .)
    DOT             reduce using rule 54 (lis -> li .)
    BLANK           reduce using rule 54 (lis -> li .)
    CR              reduce using rule 54 (lis -> li .)
    $end            reduce using rule 54 (lis -> li .)
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66

  ! PLUS            [ reduce using rule 54 (lis -> li .) ]
  ! MINUS           [ reduce using rule 54 (lis -> li .) ]


state 15

    (64) link -> LT . factor GT
    (66) factor -> . factor subfactor
    (67) factor -> . subfactor
    (68) subfactor -> . WORD
    (69) subfactor -> . NUMBER
    (70) subfactor -> . DOT
    (71) subfactor -> . BLANK
    (72) subfactor -> . TAB

    WORD            shift and go to state 11
    NUMBER          shift and go to state 38
    DOT             shift and go to state 10
    BLANK           shift and go to state 18
    TAB             shift and go to state 29

    subfactor                      shift and go to state 19
    factor                         shift and go to state 67

state 16

    (61) li -> PLUS . factor CR
    (66) factor -> . factor subfactor
    (67) factor -> . subfactor
    (68) subfactor -> . WORD
    (69) subfactor -> . NUMBER
    (70) subfactor -> . DOT
    (71) subfactor -> . BLANK
    (72) subfactor -> . TAB

    WORD            shift and go to state 11
    NUMBER          shift and go to state 38
    DOT             shift and go to state 10
    BLANK           shift and go to state 18
    TAB             shift and go to state 29

    subfactor                      shift and go to state 19
    factor                         shift and go to state 68

state 17

    (1) body -> statement .
    (3) statement -> statement . CR expression
    (4) statement -> statement . CR

    $end            reduce using rule 1 (body -> statement .)
    CR              shift and go to state 69


state 18

    (71) subfactor -> BLANK .

    WORD            reduce using rule 71 (subfactor -> BLANK .)
    NUMBER          reduce using rule 71 (subfactor -> BLANK .)
    DOT             reduce using rule 71 (subfactor -> BLANK .)
    BLANK           reduce using rule 71 (subfactor -> BLANK .)
    TAB             reduce using rule 71 (subfactor -> BLANK .)
    H1              reduce using rule 71 (subfactor -> BLANK .)
    H2              reduce using rule 71 (subfactor -> BLANK .)
    H3              reduce using rule 71 (subfactor -> BLANK .)
    STAR            reduce using rule 71 (subfactor -> BLANK .)
    USCORE          reduce using rule 71 (subfactor -> BLANK .)
    MINUS           reduce using rule 71 (subfactor -> BLANK .)
    EQUALS          reduce using rule 71 (subfactor -> BLANK .)
    EXCLAM          reduce using rule 71 (subfactor -> BLANK .)
    QUO             reduce using rule 71 (subfactor -> BLANK .)
    GT              reduce using rule 71 (subfactor -> BLANK .)
    LT              reduce using rule 71 (subfactor -> BLANK .)
    LSB             reduce using rule 71 (subfactor -> BLANK .)
    PLUS            reduce using rule 71 (subfactor -> BLANK .)
    CR              reduce using rule 71 (subfactor -> BLANK .)
    $end            reduce using rule 71 (subfactor -> BLANK .)
    RSB             reduce using rule 71 (subfactor -> BLANK .)
    RB              reduce using rule 71 (subfactor -> BLANK .)


state 19

    (67) factor -> subfactor .

    RSB             reduce using rule 67 (factor -> subfactor .)
